# MoltenEngine

./: .appveyor.yml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
Core/: CMakeLists.txt
Core/Headers/Curse/: Core.hpp  Logger.hpp  Math.hpp  Math.inl  Types.hpp
Core/Headers/Curse/Ecs/: Ecs.hpp  EcsAllocator.hpp  EcsComponent.hpp  EcsComponent.inl  EcsContext.hpp  EcsContext.inl  EcsEntity.hpp  EcsEntity.inl  EcsEntityTemplate.hpp  EcsEntityTemplate.inl  EcsSignature.hpp  EcsSignature.inl  EcsSystem.hpp  EcsSystem.inl
Core/Headers/Curse/Gui/: Canvas.hpp  Canvas.inl  Constants.hpp  Context.hpp  GuiCanvas.hpp  GuiControl.hpp  GuiRenderer.hpp  RenderObject.hpp  TemplatedWidget.hpp  TemplatedWidget.inl  Widget.hpp  Widget.inl  WidgetBehavior.hpp  WidgetDescriptor.hpp  WidgetSystem.hpp  WidgetTemplate.hpp  WidgetTemplates.hpp
Core/Headers/Curse/Gui/Behaviors/: BaseWidget.hpp  KeyboardListenerWidget.hpp  MouseListenerWidget.hpp
Core/Headers/Curse/Gui/Control/: ButtonControl.hpp  GuiButtonControl.hpp  GuiPlaneControl.hpp  PlaneControl.hpp
Core/Headers/Curse/Gui/Systems/: KeyboardWidgetSystem.hpp  MouseWidgetSystem.hpp
Core/Headers/Curse/Gui/Templates/: Button.hpp  Padding.hpp  VerticalGrid.hpp
Core/Headers/Curse/Math/: Angle.hpp  Angle.inl  AxisAlignedBoundingBox.hpp  AxisAlignedBoundingBox.inl  Matrix.hpp  Matrix.inl  Octree.hpp  Octree.inl  Vector.hpp  Vector.inl
Core/Headers/Curse/Memory/: Pointer.hpp  Pointer.inl  Reference.hpp  Reference.inl
Core/Headers/Curse/Platform/: Win32Headers.hpp  X11Headers.hpp
Core/Headers/Curse/Renderer/: Framebuffer.hpp  IndexBuffer.hpp  Material.hpp  Material.inl  Pipeline.hpp  Renderer.hpp  Resource.hpp  ResourceTracker.hpp  Shader.hpp  Shader.inl  Texture.hpp  UniformBlock.hpp  UniformBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
Core/Headers/Curse/Renderer/Material/: MaterialFunctions.hpp  MaterialNode.hpp  MaterialNode.inl  MaterialPin.hpp  MaterialPin.inl  MaterialScript.hpp  MaterialScript.inl
Core/Headers/Curse/Renderer/OpenGL/: OpenGLRenderer.hpp  OpenGLWin32Renderer.hpp  OpenGLX11Renderer.hpp  OpengGLFunctions.hpp  OpengGLHeaders.hpp  RendererOpenGL.hpp  RendererOpenGLWin32.hpp  RendererOpenGLX11.hpp  glext.h
Core/Headers/Curse/Renderer/Shader/: ShaderFunctions.hpp  ShaderNode.hpp  ShaderNode.inl  ShaderOperators.hpp  ShaderOperators.inl  ShaderPin.hpp  ShaderPin.inl  ShaderProgram.hpp  ShaderScript.hpp  ShaderScript.inl  ShaderStage.hpp  ShaderStructure.hpp  ShaderStructure.inl
Core/Headers/Curse/Renderer/Vulkan/: FramebufferVulkan.hpp  IndexBufferVulkan.hpp  PipelineVulkan.hpp  RendererVulkan.hpp  ShaderProgramVulkan.hpp  ShaderVulkan.hpp  TextureVulkan.hpp  VertexArrayVulkan.hpp  VertexBufferVulkan.hpp  Vulkan.hpp  VulkanFramebuffer.hpp  VulkanHeaders.hpp  VulkanIndexBuffer.hpp  VulkanPipeline.hpp  VulkanRenderer.hpp  VulkanShaderProgram.hpp  VulkanShaderStage.hpp  VulkanTexture.hpp  VulkanUniformBlock.hpp  VulkanUniformBuffer.hpp  VulkanVertexBuffer.hpp
Core/Headers/Curse/Scene/: Camera.hpp
Core/Headers/Curse/System/: Clock.hpp  Exception.hpp  Exception.inl  FileSystem.hpp  Mouse.hpp  Result.hpp  Result.inl  Semaphore.hpp  Signal.hpp  Signal.inl  Time.hpp  Time.inl  UserInput.hpp  Version.hpp
Core/Headers/Curse/Utility/: Bitfield.hpp  Bitfield.inl  SmartFunction.hpp  Template.hpp  Template.inl
Core/Headers/Curse/Window/: Window.hpp  WindowBase.hpp  WindowWin32.hpp  WindowWin32.inl  WindowX11.hpp  WindowX11.inl
Core/Source/Curse/: Logger.cpp
Core/Source/Curse/Ecs/: EcsAllocator.cpp  EcsContext.cpp
Core/Source/Curse/Gui/: Canvas.cpp  GuiCanvas.cpp  GuiControl.cpp  GuiRenderer.cpp  RenderObject.cpp  Widget.cpp
Core/Source/Curse/Gui/Control/: ButtonControl.cpp  GuiButtonControl.cpp  GuiPlaneControl.cpp  PlaneControl.cpp
Core/Source/Curse/Renderer/: Material.cpp  Pipeline.cpp  Renderer.cpp  ResourceTracker.cpp  Shader.cpp
Core/Source/Curse/Scene/: Camera.cpp
Core/Source/Curse/System/: Clock.cpp  FileSystem.cpp  Mouse.cpp  Semaphore.cpp  Time.cpp  UserInput.cpp  Version.cpp
Core/Source/Curse/Utility/: SmartFunction.cpp
Core/Source/Curse/Window/: Window.cpp  WindowBase.cpp  WindowWin32.cpp  WindowX11.cpp
Editor/: CMakeLists.txt
Editor/Headers/Editor/: Application.hpp  Project.hpp
Editor/Source/Editor/: Application.cpp  Editor.cpp  EditorMain.cpp  Project.cpp
Engine/Cli/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Headers/Molten/: Core.hpp  Logger.hpp  Logger.inl  Math.hpp  Math.inl  Platform.hpp  Types.hpp
Engine/Core/Source/Molten/: Logger.cpp
Engine/Core/Test/: CMakeLists.txt
Engine/Core/Test/Source/: CoreTests.cpp  LoggerTest.cpp  Test.cpp
Engine/Editor/: CMakeLists.txt
Engine/Editor/Headers/Editor/: Application.hpp  Editor.hpp  Project.hpp
Engine/Editor/Source/Editor/: Application.cpp  Editor.cpp  EditorMain.cpp  Project.cpp
Engine/EditorFramework/: CMakeLists.txt
Engine/EditorFramework/Test/: CMakeLists.txt
Engine/EditorFramework/Test/Source/: ProjectTest.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/Test/: CMakeLists.txt
Engine/Test/Core/: CMakeLists.txt
Engine/Test/Core/Molten/: LoggerTest.cpp
Test/Core/: CMakeLists.txt  CoreMathTests.hpp  CoreSystemTests.hpp  CoreTests.cpp
Test/Core/Curse/: LoggerTest.cpp
Test/Core/Curse/Ecs/: EcsAllocatorTest.cpp  EcsTest.cpp
Test/Core/Curse/Math/: AngleTest.cpp  MathTest.cpp  MatrixTest.cpp  OcreeTest.cpp  VectorTest.cpp
Test/Core/Curse/Memory/: PointerTest.cpp  ReferenceTest.cpp
Test/Core/Curse/Renderer/: MaterialTest.cpp  VulkanRendererTest.cpp
Test/Core/Curse/System/: ClockTest.cpp  ExceptionTest.cpp  MouseTest.cpp  ResultTest.cpp  SemaphoreTest.cpp  SignalTest.cpp  TimeTest.cpp  UserInputTest.cpp  VersionTest.cpp
Test/Core/Curse/Utility/: BitfieldTest.cpp  SmartFunctionTest.cpp
core/: CMakeLists.txt
core/include/Curse/: Core.hpp  Types.hpp
core/include/Curse/System/: Semaphore.hpp
core/source/Curse/System/: Semaphore.cpp
test/core/: CMakeLists.txt  CoreSystemTests.hpp  CoreTests.cpp
(+885 files in other folders)
